[package]
name = "rust_tut"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
hello_macro = { path = "hello_macro" }
hello_macro_derive = { path = "hello_macro/hello_macro_derive" }
